# par3.js

./: .gitignore  .tool-versions  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  _worker.js  _worker_test.js  build.rs  package-lock.json  package.json  wrangler.toml
.cargo/: config.toml
examples/: fetch_encode_repair_gzip.js  fetch_encode_repair_gzip_test.js
lib/: envelope.js  envelope_test.js  index.d.ts  mod.js  mod.node.js  mod.node_test.js  mod_test.js  multipart.js  multipart_test.js  par3-core.js
scripts/: benchmark.mjs  build-wasm.sh  test-coverage.mjs  test-native-coverage.mjs
src/: lib.rs  napi.rs
