[package]
name = "par3"
version = "0.1.0"
edition = "2021"
description = "Streaming PAR3-style erasure coding for Cloudflare Workers and local Node.js repair workflows"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reed-solomon-simd = "3.1.0"
wasm-bindgen = "0.2.105"

[dev-dependencies]
proptest = "1.6.0"