[package]
name = "par3"
version = "0.1.0"
edition = "2021"
description = "Streaming PAR3-style erasure coding for Cloudflare Workers and local Node.js repair workflows"
license = "MIT"
readme = "README.md"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
napi = ["dep:napi", "dep:napi-derive", "dep:num_cpus", "dep:rayon"]

[dependencies]
napi = { version = "3.0.0", default-features = false, features = ["napi8"], optional = true }
napi-derive = { version = "3.0.0", optional = true }
num_cpus = { version = "1.17.0", optional = true }
rayon = { version = "1.10.0", optional = true }
reed-solomon-simd = "3.1.0"
wasm-bindgen = "0.2.105"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
proptest = "1.6.0"